# 12bit

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  u12.rs
src/u12/: serde.rs
tests/: test_u12.rs  test_u12_arithmetic.rs  test_u12_conversions.rs  test_u12_logic.rs
