[package]
version = "0.1.0"

name = "twelve_bit"
authors = ["Martin Mroz <martinmroz@gmail.com>"]
description = "A Rust library for representing 12-bit unsigned values. This is primarily useful for implementing Chip-8 assemblers and interpreters safely. The type implements the bulk of the standard Rust literal semantics and operators, and much of the documentation is adapted from the u16 intrinsic type."
homepage = "http://github.com/martinmroz/12bit"
repository = "http://github.com/martinmroz/12bit"
documentation = "http://martinmroz.github.io/12bit"
readme = "README.md"
keywords = ["12bit", "12b"]
license = "MIT"

[features]
serde = []

[dependencies]
serde = "1"